[gd_scene load_steps=6 format=2]

[ext_resource path="res://Location_Astral_Dungeon/scripts7/Spell_Area2D.gd" type="Script" id=1]
[ext_resource path="res://Location_Astral_Dungeon/scripts7/bullet3.gd" type="Script" id=2]
[ext_resource path="res://Assets/Circle_blurred.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="bullet3" type="Area2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.0980392, 0.968627, 0.0235294, 1 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Area2D" type="Area2D" parent="." groups=["damage_group"]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Pos" type="Position2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
